# rootedinloveplants.com

./: .dockerignore  .firebaserc  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  build.sh  content.json  deploy.sh  firebase.json  index.js  kill.sh  localbuild.sh  push.sh  run.sh  styles.css
rootedinlove-wasm/: Cargo.toml
src/: credentials.rs  html-gen.rs  main.rs  server.rs
